--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ title: Julian Yap
 
   <h1>Projects</h1>
   <ul class="posts">
-    <li><a href="http://cameralensapps.com/nikon/">Nikon Lens Buddy:</a> Browse and favorite over 155 Nikon, Sigma, Tamron and Tokina lenses for Nikon DLR's on your iPhone, iPod touch or iPad with Nikon Lens Buddy! Check out over 550 hand picked reviews!</li>
-    <li><a href="http://cameralensapps.com/canon/">Canon Lens Buddy:</a> Browse and favorite over 150 Canon, Sigma, Tamron and Tokina lenses for Canon DLR's on your iPhone, iPod touch or iPad with Canon Lens Buddy! Check out over 710 hand picked reviews!</li>
-    <li><a href="http://cameralensapps.com/mirrorless/">Mirrorless Lenses:</a> Browse and favorite over 60 Micro Four Thirds, Sony E, Samsung NX and Four Thirds Mount lenses on your iPhone, iPod touch or iPad with Mirrorless Lenses! Check out over 160 hand picked reviews!</li>
+    <li><a href="http://cameralensapps.com/nikon/">Nikon Lens Buddy:</a> Over 155 Nikon, Sigma, Tamron and Tokina lenses for Nikon DLR's. Over 550 lens reviews. For iPhone, iPod touch, and iPad.</li>
+    <li><a href="http://cameralensapps.com/canon/">Canon Lens Buddy:</a> Over 150 Canon, Sigma, Tamron and Tokina lenses for Canon DLR's. Over 710 lens reviews. For iPhone, iPod touch, and iPad.</li>
+    <li><a href="http://cameralensapps.com/mirrorless/">Mirrorless Lenses:</a> Over 60 Micro Four Thirds, Sony E, Samsung NX and Four Thirds Mount lenses. Over 160 reviews. For iPhone, iPod touch, and iPad.</li>
   </ul>
 </div>
 
