Add Pages to index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@ title: Julian Yap
     {% endfor %}
   </ul>
 
+  <h1>Pages</h1>
+  <ul class="posts">
+      <li><a href="/pages/test-page.html">Test Page</a></li>
+  </ul>
+
   <h1>Projects</h1>
   <ul class="posts">
     <li><a href="http://cameralensapps.com/nikon/">Nikon Lens Buddy:</a> Over 155 Nikon, Sigma, Tamron and Tokina lenses for Nikon DLR's. Over 550 lens reviews. For iPhone, iPod touch, and iPad.</li>
