.. following on from previous commit.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ title: Julian Yap
 
   <h1>Pages</h1>
   <ul class="posts">
-      <li><a href="/pages/test-page.html">Test Page</a></li>
+      <li><a href="{{ site.baseurl }}pages/legacy-pages.html">Legacy pages</a></li>
+      <li><a href="{{ site.baseurl }}pages/test-page.html">Test Page</a></li>
   </ul>
 
   <h1>Projects</h1>
