--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ title: Julian Yap
 
   <h1>Projects</h1>
   <ul class="posts">
-    <li><a href="http://cameralensapps.com/nikon/">Nikon Lens Buddy:</a> Over 155 Nikon, Sigma, Tamron and Tokina lenses for Nikon DLR's. Over 550 lens reviews. For iPhone, iPod touch, and iPad.</li>
-    <li><a href="http://cameralensapps.com/canon/">Canon Lens Buddy:</a> Over 150 Canon, Sigma, Tamron and Tokina lenses for Canon DLR's. Over 710 lens reviews. For iPhone, iPod touch, and iPad.</li>
-    <li><a href="http://cameralensapps.com/mirrorless/">Mirrorless Lenses:</a> Over 60 Micro Four Thirds, Sony E, Samsung NX and Four Thirds Mount lenses. Over 160 reviews. For iPhone, iPod touch, and iPad.</li>
+    <li><a href="http://cameralensapps.com/nikon/">Nikon Lens Buddy:</a> Over 160 Nikon, Sigma, Tamron and Tokina lenses for Nikon cameras's. Over 575 lens reviews. For iPhone, iPod touch, and iPad.</li>
+    <li><a href="http://cameralensapps.com/canon/">Canon Lens Buddy:</a> Over 150 Canon, Sigma, Tamron and Tokina lenses for Canon DSLR's. Over 735 lens reviews. For iPhone, iPod touch, and iPad.</li>
+    <li><a href="http://cameralensapps.com/mirrorless/">Mirrorless Lenses:</a> Over 75 Micro Four Thirds, Nikon CX, Sony E, Samsung NX, Pentax Q and Four Thirds Mount lenses. Over 205 reviews. For iPhone, iPod touch, and iPad.</li>
   </ul>
 </div>
 
