--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@ title: Julian Yap
 
 <div id="home">
 
+  <ul class="posts">
+    {% for post in site.posts limit: 5 %}
+      <div class="front">
+        <div align="right"><a href="{{ post.url }}">{{ post.date | date_to_long_string }}</a></div>
+        {{ post.content }}
+        </br>
+        </br>
+      </div>
+      <hr class="front">
+      </br>
+    {% endfor %}
+  </ul>
+
   <h1>Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
