--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
   <ul class="posts">
     {% for post in site.posts limit: 5 %}
       <div class="front">
-        <div align="right"><a href="{{ post.url }}">{{ post.date | date_to_long_string }}</a></div>
+        <div align="right"><a href="{{ post.url }}" title="Permanent link to: '{{ post.title }}'">{{ post.date | date_to_long_string }}</a></div>
         {{ post.content }}
         </br>
         </br>
