--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@ title: Home
   <ul class="posts">
     {% for post in site.posts limit: 5 %}
       <div class="front">
-        <div align="right"><a href="{{ post.url }}" title="Permanent link to: '{{ post.title }}'">{{ post.date | date_to_long_string }}</a></div>
+        <div align="right"><a href="{{ post.url }}" title="Permanent link to: '{{ post.title }}'">{{ post.date | date:"%A, %e %B %Y" }}</a></div>
         {{ post.content }}
+        {{ post.date | date: "%e" | ordinalize }} {{post.date | date: "%B"}} {{post.date | date: "%Y"}}
         </br>
         </br>
       </div>
