--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: Home
 
   <h1>Pages</h1>
   <ul class="posts">
-      <li><a href="{{ site.baseurl }}pages/legacy-pages.html">Legacy pages</a></li>
+      <li><a href="{{ site.baseurl }}pages/colophon.html">Colophon</a></li>
   </ul>
 
   <h1>Projects</h1>
