Rename Colophon to About page and add more

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: Home
 
   <h1>Pages</h1>
   <ul class="posts">
-      <li><a href="{{ site.baseurl }}pages/colophon.html">Colophon</a></li>
+      <li><a href="{{ site.baseurl }}pages/about.html">About</a></li>
   </ul>
 
   <h1>Projects</h1>
